<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="standalone_app_label" translatable="false">Etar Calendar</string>
    <string name="app_label">Etar Calendar</string>
    <string name="what_label">What</string>
    <string name="where_label">Where</string>
    <string name="when_label">When</string>
    <string name="timezone_label">Time zone</string>
    <string name="attendees_label">Guests</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today_at_time_fmt">"Today at <xliff:g id="time_interval">%s</xliff:g>"</string>
    <string name="tomorrow_at_time_fmt">"Tomorrow at <xliff:g id="time_interval">%s</xliff:g>"</string>
    <string name="date_time_fmt">"<xliff:g id="date">%1$s</xliff:g>, <xliff:g id="time_interval">%2$s</xliff:g>"</string>
    <string name="repeats_label">Repetition</string>
    <string name="no_title_label">(No title)</string>
    <string name="alldaylabel1">all</string>
    <string name="alldaylabel2">day</string>
    <plurals name="Nminutes">
        
        <item quantity="one">1 minute</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> minutes</item>
    </plurals>
    <plurals name="Nmins">
        
        <item quantity="one">1 min</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> mins</item>
    </plurals>
    <plurals name="Nhours">
        
        <item quantity="one">1 hour</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> hours</item>
    </plurals>
    <plurals name="Ndays">
        
        <item quantity="one">1 day</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> days</item>
    </plurals>
    <plurals name="weekN">
        
        <item quantity="other">week <xliff:g id="count">%d</xliff:g></item>
    </plurals>
    <string name="calendar_refresh">"Refresh"</string>
    <string name="show_day_view">"Show day"</string>
    <string name="agenda_view">"Agenda"</string>
    <string name="day_view">"Day"</string>
    <string name="week_view">"Week"</string>
    <string name="month_view">"Month"</string>
    <string name="event_view">"View event"</string>
    <string name="event_create">"New event"</string>
    <string name="event_edit">"Edit event"</string>
    <string name="event_delete">"Delete event"</string>
    <string name="share_label">Share</string>
    <string name="goto_today">"Today"</string>
    <string name="goto_date">"Go to…"</string>
    <string name="menu_preferences">"Settings"</string>
    <string name="search">"Search"</string>
    <string name="hide_controls">"Hide controls"</string>
    <string name="show_controls">"Show controls"</string>
    <string name="view_settings">"View settings"</string>
    <string name="select_synced_calendars_button">Calendars to sync</string>
    <string name="hint_what">"Event name"</string>
    <string name="hint_where">"Location"</string>
    <string name="hint_description">"Description"</string>
    <string name="hint_attendees">"Guests"</string>
    <string name="creating_event">"Event created."</string>
    <string name="saving_event">"Event saved."</string>
    <string name="empty_event">"Empty event not created."</string>
    <string name="creating_event_with_guest">"Invitations will be sent."</string>
    <string name="saving_event_with_guest">"Updates will be sent."</string>
    <string name="rsvp_accepted">"Responded yes."</string>
    <string name="rsvp_tentative">"Responded maybe."</string>
    <string name="rsvp_declined">"Responded no."</string>
    <string name="create_event_dialog_save">Save</string>
    <string name="alert_title">Calendar notifications</string>
    <string name="foreground_notification_channel_name">Alert Sync</string>
    <string name="foreground_notification_channel_description">
        Foreground notification required for internal alert sync. Please mute
    </string>
    <string name="event_info_title">View event</string>
    <string name="event_info_title_invite">Meeting invitation</string>
    <string name="edit_event_to_label">To</string>
    <string name="edit_event_from_label">From</string>
    <string name="edit_event_all_day_label">All day</string>
    <string name="edit_event_calendar_label">Calendar</string>
    <string name="description_label">Description</string>
    <string name="presence_label">Show me as</string>
    <string name="privacy_label">Privacy</string>
    <string name="reminders_label">Add reminder</string>
    <string name="no_syncable_calendars">No calendars</string>
    <string name="no_calendars_found">Before you can add an event, you must add at least one Calendar account to your device and make a calendar visible. Touch Add Account to add an account (if you just added an account, wait for it to finish syncing and try again). Or touch Cancel and make sure at least one calendar is visible.</string>
    <string name="add_account">Add account</string>
    <string name="view_event_calendar_label">Calendar:</string>
    <string name="view_event_organizer_label">Organizer:</string>
    <string name="choose_event_color_label">Choose event color</string>
    <string name="event_color_picker_dialog_title">Event Color</string>
    <string name="event_color_set_to_default">Set to default calendar color</string>
    <string name="calendar_color_picker_dialog_title">Calendar Color</string>
    <string name="color_picker_default_title">Select a Color</string>
    <string name="color_swatch_description">Color <xliff:g id="color_index" example="14">%1$d</xliff:g></string>
    <string name="color_swatch_description_selected">Color <xliff:g id="color_index" example="14">%1$d</xliff:g> selected</string>
    <string name="calendar_square_color_picker_description">Color picker</string>
    <string name="view_event_response_label">Attending?</string>
    <string name="response_yes">Yes</string>
    <string name="response_maybe">Maybe</string>
    <string name="response_no">No</string>
    <string name="email_guests_label">Email guests</string>
    <string name="email_organizer_label">Email organizer</string>
    <string name="email_picker_label">Email with</string>
    <string name="email_subject_prefix" translatable="false">Re:\u0020</string>
    <string name="event_not_found">"Event not found."</string>
    <string name="map_label">Map</string>
    <string name="no_map">There is no maps app installed</string>
    <string name="call_label">Call</string>
    <string name="quick_response_settings">Quick responses</string>
    <string name="quick_response_settings_summary">Edit default responses when emailing guests</string>
    <string name="quick_response_settings_edit_title">Quick response</string>
    <string name="quick_response_dialog_title">Choose quick response</string>
    <string name="quick_response_email_failed">Failed to find an email program</string>
    <string-array name="quick_response_defaults">
        <item>Running just a couple of minutes late.</item>
        <item>Be there in about 10 minutes.</item>
        <item>Go ahead and start without me.</item>
        <item>Sorry, I can\'t make it. We\'ll have to reschedule.</item>
        </string-array>
    <string name="quick_response_custom_msg">Write your own\u2026</string>
    <string name="event_info_organizer">Organizer:</string>
    <string name="event_info_reminders_label">Reminders</string>
    <string name="agenda_today">today, <xliff:g id="date">%1$s</xliff:g></string>
    <string name="agenda_yesterday">yesterday, <xliff:g id="date">%1$s</xliff:g></string>
    <string name="agenda_tomorrow">tomorrow, <xliff:g id="date">%1$s</xliff:g></string>
    <string name="loading">Loading\u2026</string>
    <string name="show_older_events">Touch to view events before <xliff:g id="oldest_search_range">%1$s</xliff:g></string>
    <string name="show_newer_events">Touch to view events after <xliff:g id="newest_search_range">%1$s</xliff:g></string>
    <string name="search_title">Search my calendars</string>
    <string name="edit_event_label">"Details"</string>
    <string name="edit_label">"Edit"</string>
    <string name="delete_label">"Delete"</string>
    <string name="save_label">Done</string>
    <string name="discard_label">Cancel</string>
    <string name="dismiss_all_label">"Dismiss all"</string>
    <string name="snooze_label">"Snooze"</string>
    <string name="does_not_repeat">One-time event</string>
    <string name="endByDate">; until <xliff:g id="date">%s</xliff:g></string>
    <plurals name="endByCount">
        <item quantity="one">; for one time</item>
        <item quantity="other">; for <xliff:g id="number">%d</xliff:g> times</item>
    </plurals>
    <plurals name="daily">
        <item quantity="one">Daily</item>
        <item quantity="other">Every <xliff:g id="number">%d</xliff:g> days</item>
    </plurals>
    <string name="every_weekday">"Every weekday (Mon\u2013Fri)"</string>
    <plurals name="weekly">
        <item quantity="one">Weekly on <xliff:g id="days_of_week">%2$s</xliff:g></item>
        <item quantity="other">Every <xliff:g id="number">%1$d</xliff:g> weeks on <xliff:g id="days_of_week">%2$s</xliff:g></item>
    </plurals>
    <string name="monthly">Monthly</string>
    <string name="yearly_plain">Yearly</string>
    <string name="custom" product="default">"Custom (can\'t customize on phone)"</string>
    <string name="modify_event">Change only this event</string>
    <string name="modify_all">Change all events in the series</string>
    <string name="modify_all_following">Change this and all future events</string>
    <string name="new_event_dialog_option">"New event"</string>
    <string name="new_event_dialog_option_all_day">"New all day event"</string>
    <string name="delete_this_event_title">Delete this event?</string>
    <string name="delete_event_fail">Event deletion failed</string>
    <string name="delete_recurring_event_title">Delete <xliff:g id="eventtitle">%s</xliff:g>?</string>
    <string name="change_response_title">Change response</string>
    <string name="preferences_title">"Settings"</string>
    <string name="preferences_general_title">Calendar view setting</string>
    <string name="preferences_month_view_portrait">Month view layout (Portrait)</string>
    <string name="preferences_month_view_landscape">Month view layout (Landscape)</string>
    <string name="preferences_theme">Theme</string>
    <string name="preferences_light_theme">Light</string>
    <string name="preferences_dark_theme">Dark</string>
    <string name="preferences_black_theme">Black</string>
    <string name="preferences_color">Primary Color</string>
    <string name="preferences_color_teal" translatable="false">Teal</string>
    <string name="preferences_color_blue" translatable="false">Blue</string>
    <string name="preferences_color_orange" translatable="false">Orange</string>
    <string name="preferences_color_green" translatable="false">Green</string>
    <string name="preferences_color_red" translatable="false">Red</string>
    <string name="preferences_color_purple" translatable="false">Purple</string>
    <string name="preferences_color_pick">Primary color</string>
    <string name="preferences_reminder_title">Notifications \u0026 reminders</string>
    <string name="preferences_hide_declined_title">Hide declined events</string>
    <string name="default_start_title">Default view</string>
    <string name="display_options">Display options</string>
    <string name="display_time">Display time</string>
    <string name="display_location">Display location</string>
    <string name="maximum_number_of_lines">Max number of lines in event</string>
    <string name="default_start_last">Previously used view</string>
    <string name="preferences_week_start_day_title">Week starts on</string>
    <string name="cal_export_event_sdcard_title">Export to SD card</string>
</resources>